# claude_safe

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  SETUP.md  claude.md  pyproject.toml
.claude/skills/deep-research/: SKILL.md
.github/workflows/: security-checks.yml
projects/: __init__.py
projects/deep_research/: .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  __init__.py  config.py  main.py  models.py  pyproject.toml  report_generator.py  requirements.txt
projects/deep_research/sources/: __init__.py  arxiv_source.py  core_source.py  crossref_source.py  dblp_source.py  europepmc_source.py  github_source.py  google_trends_source.py  hackernews_source.py  openalex_source.py  reddit_source.py  scholar_source.py  web_source.py
projects/deep_research/synthesis/: __init__.py  analyzer.py  filter.py  query_rewriter.py  source_selector.py
projects/deep_research/tests/: __init__.py  test_analyzer.py  test_arxiv_source.py  test_config.py  test_core_source.py  test_crossref_source.py  test_dblp_source.py  test_europepmc_source.py  test_filter.py  test_hackernews_source.py  test_main.py  test_openalex_source.py  test_report_generator.py  test_scholar_source.py  test_source_selector.py  test_web_source.py
