[tool.poetry]
name = "claude_safe"
version = "0.1.0"
description = "Secure monorepo for Claude Code data engineering projects"
authors = ["Tim Nachtegaele"]
readme = "README.md"
packages = [{include = "projects"}]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.79.0"
arxiv = "^2.4.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
openai = "^2.20.0"
ddgs = "^9.10.0"
pytrends = "^4.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["projects"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov --cov-report=term-missing --cov-report=html"
